<?xml version="1.0"?>
<package format="2">
  <name>rb</name>
  <version>0.0.0</version>
  <description>The rb package</description>

  <maintainer email="arthur-ic@todo.todo">arthur-ic</maintainer>

  <license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>

<build_depend>message_generation</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>urdf</build_depend>
<build_depend>xacro</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>message_generation</build_depend>

<depend>roslaunch</depend>
<depend>robot_state_publisher</depend>
<depend>joint_state_publisher</depend>
<depend>joint_state_publisher_gui</depend>
<depend>gazebo</depend>

<build_export_depend>roscpp</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_export_depend>urdf</build_export_depend>
<build_export_depend>xacro</build_export_depend>

<exec_depend>roscpp</exec_depend>
<exec_depend>std_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>urdf</exec_depend>
<exec_depend>xacro</exec_depend>
<exec_depend>message_runtime</exec_depend>


  <export>
    <architecture_independent />
  </export>
</package>
